# movie-catalog-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.continue/mcpServers/: catalog-mcp-server.yaml
.cursor/: mcp.json
src/movie_catalog_mcp_server/: __init__.py  fastmcp_server.py  inspector_run.py  server.py  setting.py
