[project]
name = "movie-catalog-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kilsoo Kang", email = "kilsoo75@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "fastmcp>=2.13.0.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.0",
]

[project.scripts]
movie-catalog-mcp-server = "movie_catalog_mcp_server:main"
movie-catalog-fastmcp-server = "movie_catalog_mcp_server:fastmcp_main"
movie-catalog-stdio-mcp-server = "movie_catalog_mcp_server:stdio_main"


[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
